--- a/src/.Net/test/MyBank.Server.BackendTests/packages.config
+++ b/src/.Net/test/MyBank.Server.BackendTests/packages.config
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.CodeCoverage" version="17.0.0" targetFramework="net472" />
+  <package id="Microsoft.NET.Test.Sdk" version="17.0.0" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.2.7" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.2.7" targetFramework="net472" />
+  <package id="NUnit" version="3.13.2" targetFramework="net472" />
+  <package id="NUnit3TestAdapter" version="4.1.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="Unity.Abstractions" version="5.11.7" targetFramework="net472" />
