C# Winforms Client Implementierung

--- a/src/.Net/MyBank.WCFConnector/MyBank.WCFConnector.csproj
+++ b/src/.Net/MyBank.WCFConnector/MyBank.WCFConnector.csproj
@@ -80,6 +80,10 @@
       <Project>{448DFFCC-FEDD-4884-A160-9BFD6310BB1B}</Project>
       <Name>MyBank.Nameservice</Name>
     </ProjectReference>
+    <ProjectReference Include="..\src\Server\MyBank.Server.Backend\MyBank.Server.Backend.csproj">
+      <Project>{BBFCB325-CC3D-4472-BF8F-3A0546CBA847}</Project>
+      <Name>MyBank.Server.Backend</Name>
+    </ProjectReference>
     <ProjectReference Include="..\src\Server\MyBank.Server.WCF\MyBank.Server.WCF.csproj">
       <Project>{bf5f2245-4e81-4fef-aa8a-6b4ba077f815}</Project>
       <Name>MyBank.Server.WCF</Name>
