--- a/src/.Net/src/Client/MyBank.Client/MyBank.Client.csproj
+++ b/src/.Net/src/Client/MyBank.Client/MyBank.Client.csproj
@@ -61,6 +61,9 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="RestSharp, Version=106.13.0.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\RestSharp.106.13.0\lib\net452\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
@@ -69,6 +72,7 @@
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\System.Threading.Tasks.Extensions.4.5.2\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -217,6 +221,10 @@
     <ProjectReference Include="..\..\MyBank.Nameservice\MyBank.Nameservice.csproj">
       <Project>{448DFFCC-FEDD-4884-A160-9BFD6310BB1B}</Project>
       <Name>MyBank.Nameservice</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\MyBank.RESTConnector\MyBank.RESTConnector.csproj">
+      <Project>{342D0770-29D7-4009-A0C9-85C0C1C6E503}</Project>
+      <Name>MyBank.RESTConnector</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
