--- a/src/.Net/src/Server/MyBank.Server/packages.config
+++ b/src/.Net/src/Server/MyBank.Server/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="4.2.0" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="Unity.Abstractions" version="5.11.7" targetFramework="net472" />
   <package id="Unity.Container" version="5.11.11" targetFramework="net472" />
