--- a/src/C/MyBank/MyBankAcc/MyBankAcc.vcxproj.filters
+++ b/src/C/MyBank/MyBankAcc/MyBankAcc.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClInclude Include="Priviliges.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="User.cpp">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="Account.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -54,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MyBankServiceConnector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="User.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
