--- a/src/C/MyBank/MyBankClient/MyBankClient.vcxproj.filters
+++ b/src/C/MyBank/MyBankClient/MyBankClient.vcxproj.filters
@@ -15,25 +15,14 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MyBankServer.c">
+    <ClCompile Include="MyBankClient.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MyBankServerStub.c">
+    <ClCompile Include="MyBankClientStub.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MyBankServerImpl.c">
+    <ClCompile Include="MyBankMem.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="MyBankServer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\MyBankConfig.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\RpcException.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
