--- a/src/C/MyBank/MyBankCCOM/MyBankCCOM.vcxproj
+++ b/src/C/MyBank/MyBankCCOM/MyBankCCOM.vcxproj
@@ -112,6 +112,7 @@
       <SubSystem>Windows</SubSystem>
       <ModuleDefinitionFile>.\MyBankCCOM.def</ModuleDefinitionFile>
       <RegisterOutput>true</RegisterOutput>
+      <AdditionalDependencies>comsuppw.lib;ole32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
