--- a/src/C/MyBank/MyBankClientCCOM/MyBankClientCCOM.vcxproj.filters
+++ b/src/C/MyBank/MyBankClientCCOM/MyBankClientCCOM.vcxproj.filters
@@ -18,11 +18,22 @@
     <ClCompile Include="MyBankClientCCOM.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\MyBankClient\IMyBankFunctions.cpp">
+    <ClCompile Include="IMyBankFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\MyBankClient\MyBankClientConsoleApp.cpp">
+    <ClCompile Include="MyBankClientConsoleApp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="IMyBankFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MyBankClientConsoleApp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
