--- a/src/C/MyBank/MyBankAcc/MyBankAcc.vcxproj
+++ b/src/C/MyBank/MyBankAcc/MyBankAcc.vcxproj
@@ -120,7 +120,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -150,6 +150,7 @@
     <ClInclude Include="MyBank.h" />
     <ClInclude Include="MyBankServiceConnector.h" />
     <ClInclude Include="Statement.h" />
+    <ClCompile Include="ClientHelperFunctions.cpp" />
     <ClCompile Include="User.cpp" />
     <ClInclude Include="Priviliges.h" />
     <ClInclude Include="Transaction.h" />
