--- a/src/C/MyBank/MyBankAcc/MyBankAcc.vcxproj.filters
+++ b/src/C/MyBank/MyBankAcc/MyBankAcc.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClCompile Include="User.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ClientHelperFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
