--- a/src/C/MyBank/MyBankAcc/MyBankAcc.vcxproj.filters
+++ b/src/C/MyBank/MyBankAcc/MyBankAcc.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClCompile Include="ClientHelperFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="JsonUtilityFunctions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
